# light

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake
progress/week_1/: main.aux  main.fdb_latexmk  main.fls  main.nav  main.tex  main.toc  main.vrb
progress/week_2/: main.tex
scripts/: cmake.sh  run.sh
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  chamber.cpp  chamber.hpp  engine.cpp  engine.hpp  geometry.hpp  physconstants.hpp  real.hpp  surface.cpp  surface.hpp  units.hpp  wave.cpp  wave.hpp
src/visuals/: CMakeLists.txt  ScreenDisplayer.cpp  ScreenDisplayer.hpp  experimentdisplayer.cpp  experimentdisplayer.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  multislider.cpp  multislider.hpp  physicsthread.cpp  physicsthread.hpp  sizes.hpp
